--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -75,3 +75,11 @@ jobs:
         run: ls
       - name: Deploy
         run: echo "Deploying..."
+  report:
+    runs-on: ubuntu-latest
+    if: failure()
+    steps:
+      - name: output information
+        run: |
+          echo "something went wrong!"
+          echo "${{github}}"
