--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -77,6 +77,7 @@ jobs:
         run: echo "Deploying..."
   report:
     runs-on: ubuntu-latest
+    needs: [lint, test]
     if: failure()
     steps:
       - name: output information
