--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -38,7 +38,9 @@ jobs:
         run: npm run test
         id: run-test
       - name: Upload test report
-        if: failure() && steps.run-test.outcome == 'failure'
+        if: failure() && steps.run-test.outcome == 'failure' 
+        #here above if the test code fails we want github to permform this artificats step. 
+        #Instead of this we can add 'continue-on-error: true'. then even tests step fails the workflow will continue an  will success
         uses: actions/upload-artifact@v3
         with:
           name: test-report
@@ -80,7 +82,7 @@ jobs:
         run: echo "Deploying..."
   report:
     runs-on: ubuntu-latest
-    needs: [lint, test]
+    needs: [lint, deploy]
     if: failure()
     steps:
       - name: output information
