--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -2,6 +2,7 @@ name: Matrix stratagies
 on: push
 jobs:
     build:
+        continue-on-error: true
         strategy:
             matrix:
                 node_version: [12,14,18]
