--- a/.github/workflows/reusable_used.yml
+++ b/.github/workflows/reusable_used.yml
@@ -1,4 +1,4 @@
-name: Website Deployment
+name: Reusable Website Deployment
 on:
   push:
     branches:
@@ -70,8 +70,16 @@ jobs:
           path: dist
   deploy:
     needs: build
-    uses: ./.github/workflows/reusable.yml
-
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get build artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: dist-files
+      - name: Output contents
+        run: ls
+      - name: Deploy
+        run: echo "Deploying..."
   report:
     runs-on: ubuntu-latest
     needs: [lint, deploy]
