--- a/.github/workflows/reusable_used.yml
+++ b/.github/workflows/reusable_used.yml
@@ -70,16 +70,7 @@ jobs:
           path: dist
   deploy:
     needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Get build artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: dist-files
-      - name: Output contents
-        run: ls
-      - name: Deploy
-        run: echo "Deploying..."
+    uses: ./.github/workflows/reusable.yml
   report:
     runs-on: ubuntu-latest
     needs: [lint, deploy]
