--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -1,5 +1,11 @@
 name: reusable workflow
-on: workflow_call #using this wf in other wf "reusable_wf_import"
+on:  #using this wf in other wf "reusable_wf_import"
+    workflow_call:
+        inputs:
+            artifact-name:
+                description: name of deployment artifact name
+                default: dist
+                type: string
 jobs:
     deploy: 
         runs-on: ubuntu-latest
@@ -7,7 +13,7 @@ jobs:
             - name: download artifacts
               uses: actions/download-artifact@v3
               with:
-                name: dist-files
+                name: ${{inputs.artifact-name}}
             - name: list all files
               run: ls
             
