--- a/.github/workflows/reusable_used.yml
+++ b/.github/workflows/reusable_used.yml
@@ -71,6 +71,8 @@ jobs:
   deploy:
     needs: build
     uses: ./.github/workflows/reusable.yml
+    with:
+      artifact-name: dist-files
   report:
     runs-on: ubuntu-latest
     needs: [lint, deploy]
