--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -6,8 +6,16 @@ on:  #using this wf in other wf "reusable_wf_import"
                 description: name of deployment artifact name
                 default: dist
                 type: string
+        outputs:
+            result:
+                description: the result of the deployment operation
+                value: ${{ jobs.deploy.outputs.outcome }}
+
+            
 jobs:
-    deploy: 
+    deploy:
+        outputs:
+            outcome: ${{ steps.set-result.outputs.step-result }}
         runs-on: ubuntu-latest
         steps:
             - name: download artifacts
@@ -16,6 +24,9 @@ jobs:
                 name: ${{inputs.artifact-name}}
             - name: list all files
               run: ls
+            - name: set result output
+              id: set-result
+              run: echo "step-result=success" >> $GITHUB_OUTPUT
             
 
               
