--- a/.github/workflows/reusable_used.yml
+++ b/.github/workflows/reusable_used.yml
@@ -73,6 +73,13 @@ jobs:
     uses: ./.github/workflows/reusable.yml
     with:
       artifact-name: dist-files
+
+  print-deploy-result:
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - name: Output info
+        run: echo "${{ needs.deploy.outputs.result }}"
   report:
     runs-on: ubuntu-latest
     needs: [lint, deploy]
